--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <textarea id="output" rows="8" style="width:100%;"></textarea>
+  <textarea id="output" rows="10" style="width:100%; height:70%;"></textarea>
   <br/>
   <script src="scripts.js"></script>
 
