--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
 <head>
   <meta charset="UTF-8">
   <title>JavaScript Event KeyCodes</title>
+  <style>
+    * { margin: 0; padding: 0; }
+    html, body { width: 100%; height: 100%; overflow: hidden; }
+  </style>
 </head>
 
 <body>
-  <textarea id="output" rows="10" style="width:100%; height:70%;"></textarea>
+  <textarea id="output" rows="20" style="font-size: 10px; display: block; position: absolute; width:100%; height:100%; left: 0; top: 0; object-fit: fill; z-index: 2; "></textarea>
   <br/>
   <script src="scripts.js"></script>
 
-  <input type="text" onkeypress="printKey()" autofocus></input>
+  <input type="text" onkeypress="printKey()" autofocus style="z-index: 1;"></input>
 </body>
 
 </html>
