Open child window to test max memory limit, the whole app still crashes

--- a/index2.html
+++ b/index2.html
@@ -13,7 +13,7 @@
 <body>
   <textarea id="output" rows="20" style="font-size: 11px; display: block; width:100%; height:100%; left: 0; top: 0; object-fit: fill; z-index: 2; "></textarea>
   <br/>
-  <script src="scripts.js"></script>
+  <script src="scripts2.js"></script>
 
   <input type="text" onkeypress="printKey()" autofocus style="z-index: 1;"></input>
 </body>
